# autoresearch-cli

./: .gitignore  README.md  pyproject.toml
autoresearch_cli/: __init__.py  main.py
