[project]
name = "autoresearch-cli"
version = "0.1.0"
description = "CLI tool to manage LLM-driven research experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
autoresearch = "autoresearch_cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoresearch_cli*"]

[tool.uv]
dev-dependencies = []

[tool.uv.pip]
system = false
